--- a/index.html
+++ b/index.html
@@ -91,50 +91,45 @@
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">React</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                            I have beginner level Knowledge about react. React is a free and open-source front-end JavaScript library for building user interfaces based on components. It is maintained by Meta and a community of individual developers and companies. React can be used to develop single-page, mobile, or server-rendered applications with frameworks like Next.js.
                         </p>
                     </div>
                  </div>
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">Java Script</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                            JavaScript, often abbreviated as JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. As of 2023, 98.7% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries.
                         </p>
                     </div>
                  </div>
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">Tailwind CSS</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                            Tailwind CSS is an open source CSS framework. The main feature of this library is that, unlike other CSS frameworks like Bootstrap, it does not provide a series of predefined classes for elements such as buttons or tables.
+			</p>
+                    </div>
+                 </div>
+                 <div class="time-line-description">
+                    <div class="mini-circle"></div>
+                    <div class="content">
+                        <h2 class="content-timeline-title">CSS</h2>
+                        <p class="content-timeline-description">
+                            Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
                         </p>
                     </div>
                  </div>
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">HTML</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
-                        </p>
-                    </div>
-                 </div>
-                 <div class="time-line-description">
-                    <div class="mini-circle"></div>
-                    <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
-                        <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                          The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It defines the meaning and structure of web content. It is often assisted by technologies such as Cascading Style Sheets and scripting languages such as JavaScript.
                         </p>
                     </div>
                  </div>
