--- a/index.html
+++ b/index.html
@@ -102,50 +102,49 @@
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">React Js</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                            React. js is an open-source JavaScript library, crafted with precision by Facebook, that aims to simplify the intricate process of building interactive user interfaces. 
+                            Imagine a user interface built with React as a collection of components, each responsible for outputting a small, reusable piece of HTML code.
                         </p>
                     </div>
                  </div>
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">JavaScript</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                            JavaScript is a scripting language used to develop web pages. Developed in Netscape, JS allows developers to create a dynamic and interactive web page to interact
+                            with visitors and execute complex actions. It also enables users to load content into a document without reloading the entire page.
                         </p>
                     </div>
                  </div>
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">Tailwind CSS</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                           Tailwind CSS is a design system implementation in pure CSS. It is also configurable. 
+                            It gives developers super powers. It allows them to build websites with a clean consistent UI out of the box.
                         </p>
                     </div>
                  </div>
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">CSS</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                            CSS (Cascading Style Sheets) is used to style and layout web pages — for example, to alter the font, color, 
+                            size, and spacing of your content, split it into multiple columns, or add animations and other decorative features.
                         </p>
                     </div>
                  </div>
                  <div class="time-line-description">
                     <div class="mini-circle"></div>
                     <div class="content">
-                        <h2 class="content-timeline-title">Web Development</h2>
+                        <h2 class="content-timeline-title">HTML</h2>
                         <p class="content-timeline-description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Fuga, aspernatur fugiat? Mollitia doloremque vero corporis distinctio consequuntur suscipit aspernatur laborum
+                            HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example, content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
                         </p>
                     </div>
                  </div>
